--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -252,7 +252,7 @@ agm-map {
     width:100%;
     padding-top: 15px;
 }
-.checkbox_list_element:nth-child(8) {
+.checkbox_list_element:last-of-type  {
     height: 50px;
     width:100%;
     border: 0;
@@ -260,11 +260,8 @@ agm-map {
 
 .other_textbox{
     position: absolute;
-    top: calc(100% - 150px);;
+    top: calc(100% - 155px);;
     margin-left: 90px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 5px;
     width: 50%;
     padding: 8px 8px;
 }
