--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="dropdown_list box-sha" *ngIf="listMenu">
-          <div class="dropdown_list_element" (click)="pg3Continue= true; radio= true" *ngFor = "let value of carsDropDown">
+          <div class="dropdown_list_element" (click)="page5Continue('car')" radio= "true" *ngFor = "let value of carsDropDown">
             <div class="row m_10">
               <div><input type="radio" name="radio"> </div>&nbsp; &nbsp;
               <div>
@@ -185,7 +185,7 @@
             <img height="10%" width="10%" src="../../assets/Icons_Property.png" alt="First slide"> &nbsp; &nbsp;
             <div>
               <span><b>Policy Number</b></span>
-              <p>56788-8909-6789</p>
+              <p>{{policyNumber}}</p>
               <!-- <span class="flo_rgt">
                   <i class="material-icons">
                     expand_more
@@ -195,7 +195,7 @@
           </div>
         </div>
         <div class="dropdown_list box-sha" *ngIf="menuList">
-          <div class="dropdown_list_element" (click)="pg3Continue= true; radio= true" *ngFor = "let value of dropdown_adressList">
+          <div class="dropdown_list_element" (click)="page5Continue('property')" radio= "true" *ngFor = "let value of dropdown_adressList">
             <div class="row m_10">
               <div><input type="radio" name="radio"> </div>&nbsp; &nbsp;
               <div>
@@ -538,10 +538,13 @@
     </ng-container>
     <ng-container *ngIf="step===12">
       <div class="container-pg">
-        <div class="submission-header"><span><b>Are you ready to submit this claim?</b></span></div>
+        <div class="submission-header">
+          <span *ngIf = "!propertyClaim"><b>Are you ready to submit this claim?</b></span>
+          <span *ngIf = "propertyClaim"><b>Thanks for all the information</b></span>
+        </div>
         <br>
         <br>
-        <button type="button" class="btn btn-default btn-block round-default" (click)="step=6">Go back and review</button>
+        <button type="button" class="btn btn-default btn-block round-default" (click)="carOrPropertyPolicy()">Go back and review</button>
         <button type="button" class="btn btn-primary btn-block" (click)="nextPage()">Submit</button>
       </div>
     </ng-container>
@@ -666,8 +669,8 @@
         <br>
         <div class="box-sha">
           <div class="list_Option" (click)="nextPage()">
-            <img class="img_plac" src="../../assets/Icons_Flood.png" alt="roadside">
-            <div class="dis_inl mrg_top_10px">Pipe Broken</div>
+            <img class="img_plac" src="../../assets/Leaking pipe.png" alt="roadside">
+            <div class="dis_inl mrg_top_10px">Leaking/bursting pipe </div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
                 chevron_right
@@ -676,8 +679,8 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Icons_Flood.png" alt="roadside">
-            <div class="dis_inl mrg_top_10px">Pipe under </div>
+            <img class="img_plac" src="../../assets/Water buildup.png" alt="roadside">
+            <div class="dis_inl mrg_top_10px">Water buildup in basement/attic </div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
                 chevron_right
@@ -686,8 +689,8 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Icons_Flood.png" alt="roadside">
-            <div class="dis_inl mrg_top_10px">Overflow from bathtub</div>
+            <img class="img_plac" src="../../assets/Faulty household appliances.png" alt="roadside">
+            <div class="dis_inl mrg_top_10px">Faulty household appliances/sanitation</div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
                 chevron_right
@@ -696,8 +699,8 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Icons_Flood.png" alt="roadside">
-            <div class="dis_inl mrg_top_10px">Sewer drainage</div>
+            <img class="img_plac" src="../../assets/Plumbing issue.png" alt="roadside">
+            <div class="dis_inl mrg_top_10px">Plumbing issue </div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
                 chevron_right
@@ -706,8 +709,28 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Icons_Flood.png" alt="roadside">
-            <div class="dis_inl mrg_top_10px">Snow on roof</div>
+            <img class="img_plac" src="../../assets/Heating, ventilating and AC units.png" alt="roadside">
+            <div class="dis_inl mrg_top_10px">Heating, ventilating and AC units </div>
+            <span class="flo_rgt mrg_top_10px">
+              <i class="material-icons">
+                chevron_right
+               </i>
+            </span>
+            <div class="div_clr"></div>
+          </div>
+           <div class="list_Option">
+            <img class="img_plac" src="../../assets/Leaking roof.png" alt="roadside">
+            <div class="dis_inl mrg_top_10px">Leaking roof </div>
+            <span class="flo_rgt mrg_top_10px">
+              <i class="material-icons">
+                chevron_right
+               </i>
+            </span>
+            <div class="div_clr"></div>
+          </div>
+           <div class="list_Option">
+            <img class="img_plac" src="../../assets/Drain_issue.png" alt="roadside">
+            <div class="dis_inl mrg_top_10px">Drain/sewer issue </div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
                 chevron_right
@@ -716,8 +739,8 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Icons_Flood.png" alt="roadside">
-            <div class="dis_inl mrg_top_10px">Frozen pipe</div>
+            <img class="img_plac" src="../../assets/Sprinkler malfunction.png" alt="roadside">
+            <div class="dis_inl mrg_top_10px">Sprinkler malfunction</div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
                 chevron_right
@@ -764,6 +787,150 @@
         <button type="button" class="btn btn-primary btn-block mg_15" (click)="nextPage()">Continue</button>
       </div>
     </ng-container>
+    <!-- Step 18 -->
+    <ng-container *ngIf="step===18">
+      <div class="container-pg">
+        <div class="pg-header"><span>Do you have any other details to add?</span></div>
+        <span class="help_text">We encourage you to provide as much details as possible for a quicker resolution</span>
+        <br><br>
+        <br>
+        <div class="dropdown_button box-sha" (click)="userSelectReport='car Image'; nextPage(); uploadedcar = true">
+          <div style="height:35px">
+            <span>Images of damages</span>
+             <span style="float:right">
+              <i *ngIf="!uploadedcar" class="material-icons">
+                add
+              </i>
+              <i *ngIf="uploadedcar" class="material-icons">
+                  done
+              </i>
+            </span>
+          </div>
+        </div>
+        <br>
+        <div class="dropdown_button box-sha" (click)="userSelectReport='3rd party'; nextPage(); uploaded3rdparty = true; ">
+          <div style="height:35px">
+            <span>Details of the other party</span>
+            <span style="float:right">
+              <i *ngIf="!uploaded3rdparty" class="material-icons">
+                add
+              </i> 
+              <i *ngIf="uploaded3rdparty" class="material-icons">
+                done
+              </i>           
+            </span>
+          </div>
+        </div>
+        <div class="dropdown_button box-sha" (click)="userSelectReport='police report'; nextPage();uploadedpolice = true;">
+          <div style="height:35px">
+            <span>Police report</span>
+            <span style="float:right">
+              <i *ngIf="!uploadedpolice" class="material-icons">
+                add
+              </i> 
+              <i *ngIf="uploadedpolice" class="material-icons">
+                  done
+               </i>           
+            </span>
+          </div>
+        </div>
+        <br>
+        <br>       
+        <button type="button" class="btn btn-primary btn-block" (click)="propertySubmittion()">Next</button>
+      </div>
+    </ng-container>
+    <!-- Step 19 -->
+    <ng-container *ngIf="step===19">
+      <div class="container-pg">
+        <div class="pg-header">
+          <span *ngIf="userSelectReport=='car Image'">Images of Your Damges</span>
+          <span *ngIf="userSelectReport=='3rd party'">Details of the other party</span>
+          <span *ngIf="userSelectReport=='police report'">Police Report</span>
+        </div>
+         <span class="help_text" *ngIf="userSelectReport=='car Image'">Please upload images showing damages.</span>
+        <span class="help_text" *ngIf="userSelectReport=='police report'">Please upload police report, if available</span>
+        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Please provide contact details or upload any available images of insurance card, driving license or carnumber plate</span> 
+        <br>
+        <div *ngIf="userSelectReport=='3rd party'">
+          <div class="form-group">
+            <label for="comment"><b>Provide a short description of the damages to the other's property*</b></label>
+            <textarea class="form-control" placeholder="Type here" rows="3" [(ngModel)]="cardesc" name="cardesc"></textarea>
+          </div>
+          <div class="optional_text"></div>
+          <div class="form-group">
+            <div>
+              <input class="form-control" placeholder="Full Name"  [(ngModel)]="fullName" name="fullName" id="inputdefault" type="text">
+            </div>
+            <br>
+            <div>
+              <input class="form-control" placeholder="Phone Number" [(ngModel)]="phoneNum" name="PhoneNumber" id="inputdefault" type="text">
+            </div>
+            <br>
+            <div >
+              <input class="form-control" placeholder="E-mail" [(ngModel)]="Email" name="Email" id="inputdefault" type="text">
+            </div>
+            <br>
+          </div>
+          <div class="optional_text"><span>or</span></div>
+        </div>
+        <br>
+        <div class="image_div image_height_upload">
+          <i class="material-icons" (click)="fileToUpload.click()">
+            add
+          </i>
+          <span>Upload/Capture Image</span>
+        </div>
+        <input #fileToUpload type="file" style="display:none;" accept="image/*" (change)="handleInputChange($event)"> 
+        <br>
+        <button type="button" class="btn btn-primary btn-block mg_15" (click)="nextPage()">Continue</button>
+      </div>
+    </ng-container>
+    <!-- Step 20 -->
+    <ng-container *ngIf="step===20">
+      <div class="container-pg">
+        <div class="pg-header">
+          <span *ngIf="userSelectReport=='car Image'">Images of Your Damages</span>
+          <span *ngIf="userSelectReport=='3rd party'">Details of the other party</span>
+          <span *ngIf="userSelectReport=='police report'">Police Report</span>
+        </div>
+        <span class="help_text" *ngIf="userSelectReport=='car Image'">Please upload/capture images showing damages</span> 
+        <br>
+        <span class="help_text" *ngIf="userSelectReport=='police report'">Please upload police report, if available</span>
+        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Please upload/capture images of damages to the other party</span>
+        <br>
+        <div class="row">
+          <div class="col-6">
+            <img *ngIf="userSelectReport=='car Image'"[src]="(url['carImage'] && url['carImage']['result']) ? imageData : '../../assets/not_available.jpg'" height="100%" width="100%">
+            <img *ngIf="userSelectReport=='3rd party'" [src]="(url['3rdParty'] && url['3rdParty']['result']) ? imageData : '../../assets/not_available.jpg'" height="100%" width="100%">
+            <img *ngIf="userSelectReport=='police report'"[src]="(url['policeReport'] && url['policeReport']['result']) ? imageData : '../../assets/not_available.jpg'" height="100%" width="100%">
+          </div>
+          <div class="col-6 image_div image_height_upload_extra" *ngIf = "!secondImage">
+            <i class="material-icons" (click)="fileToUpload.click()">
+            add
+          </i>
+          <span>Upload/Capture Image</span>
+        </div>
+        <input #fileToUpload type="file" style="display:none;" accept="image/*" (change)="secondImgInputChanges($event)"> 
+        <br>
+        </div>
+        <div class="col-6 second_image_upload_extra"  *ngIf = "secondImage">
+            <img *ngIf="userSelectReport=='car Image'"[src]="(secondImgUrl['carImage'] && secondImgUrl['carImage']['result']) ? secondImageData : '../../assets/not_available.jpg'" height="100%" width="100%">
+            <img *ngIf="userSelectReport=='3rd party'" [src]="(secondImgUrl['3rdParty'] && secondImgUrl['3rdParty']['result']) ? secondImageData : '../../assets/not_available.jpg'" height="100%" width="100%">
+            <img *ngIf="userSelectReport=='police report'"[src]="(secondImgUrl['policeReport'] && secondImgUrl['policeReport']['result']) ? secondImageData : '../../assets/not_available.jpg'" height="100%" width="100%">
+        </div>
+        <br>
+        <div  *ngIf="userSelectReport == 'car Image'" class="form-group">
+          <label for="comment"><b>Provide a short description of the damages</b></label>
+          <textarea class="form-control" placeholder="Type here" rows="3" [(ngModel)]="carImageDesc" name="carImageDesc"></textarea>
+        </div>
+               <br>
+        <button type="button" *ngIf="userSelectReport == 'car Image'" class="btn btn-primary btn-block" (click)="uploadDoc();">Next</button>
+        <button type="button" *ngIf="userSelectReport == '3rd party' " class="btn btn-primary btn-block" (click)="step = 9">Next</button>
+        <button type="button" *ngIf="userSelectReport == 'police report'" class="btn btn-primary btn-block" (click)="step = 9">Next</button>
+      </div>
+      
+    </ng-container>
+    <!-- Step 14 -->
       <div *ngIf="step===14">
         <div class="container-pg">
            <div class="pg-header">
@@ -877,7 +1044,7 @@
               </label>
             </div>
               <div *ngIf = "enableOtherText" class="form-group">
-                <input type="text" class="form-control other_textbox" placeholder="Type here" rows="3" [(ngModel)]="enableOtherText" name="enableOtherText">
+                <input type="text" class="form-control other_textbox" placeholder="Type here">
               </div>
               <br>
               <button [disabled]="!form.valid" class="btn btn-primary btn-block">OK</button>
@@ -901,7 +1068,7 @@
               </label>
             </div>
               <div *ngIf = "otherText" class="form-group">
-                 <input type="text" class="form-control other_textbox" placeholder="Type here" rows="3" [(ngModel)]="otherText" name="otherText">
+                 <input type="text" class="form-control other_textbox" placeholder="Type here">
               </div>
               <br>
               <button [disabled]="!form.valid" class="btn btn-primary btn-block">OK</button>
@@ -925,7 +1092,7 @@
               </label>
             </div>
               <div *ngIf = "valuableOtherText" class="form-group">
-                 <input type="text" class="form-control other_textbox" placeholder="Type here" rows="3" [(ngModel)]="valuableOtherText" name="valuableOtherText">
+                 <input type="text" class="form-control other_textbox" placeholder="Type here">
               </div>
               <br>
               <button [disabled]="!form.valid" class="btn btn-primary btn-block">OK</button>
