fix for delay images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,17 @@
 </div> -->
 
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+
+<div class="container">
+  <div class="row">
+    <div class="container_header">
+      <app-header></app-header>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 container-nopadding">
+      <app-home></app-home>    
+    </div>
+  </div>
+</div>
