--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -606,7 +606,7 @@
           <div class="box-sha">
             <div class="list_Option">
                 <img class="img_size" src="../../assets/Fire.png" alt="roadside">
-                <div class="dis_inl mrg_top_10px">Fire</div>
+                <div class="dis_inline mrg_top_10px">Fire</div>
                 <span class="flo_rgt mrg_top_10px">
                   <i class="material-icons">
                      chevron_right
@@ -618,7 +618,7 @@
           <div class="box-sha">
            <div class="list_Option" (click)="nextPage()">
                 <img class="img_size" src="../../assets/Water.png">
-                <div class="dis_inl mrg_top_10px">Water</div>
+                <div class="dis_inline mrg_top_10px">Water</div>
                 <span class="flo_rgt mrg_top_10px">
                   <i class="material-icons">
                      chevron_right
@@ -630,7 +630,7 @@
           <div class="box-sha">
             <div class="list_Option">
                 <img class="img_size" src="../../assets/weather.png">
-                <div class="dis_inl mrg_top_10px">Weather</div>
+                <div class="dis_inline mrg_top_10px">Weather</div>
                 <span class="flo_rgt mrg_top_10px">
                   <i class="material-icons">
                      chevron_right
@@ -642,7 +642,7 @@
           <div class="box-sha">
             <div class="list_Option_no_border">
                 <img class="img_size" src="../../assets/theft.png">
-                <div class="dis_inl mrg_top_10px">Theft</div>
+                <div class="dis_inline mrg_top_10px">Theft</div>
                 <span class="flo_rgt mrg_top_10px">
                   <i class="material-icons">
                      chevron_right
