--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,4 +4,12 @@
     padding-right:0px !important;
 }
     */
-   
+    .container{
+        margin: 0;
+        padding : 0;
+        border: none;
+        max-width: 100%;
+    }
+    .container_header{
+        width:100%;
+    }
