help content in last step

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -113,6 +113,7 @@
 }
 .modal-body{
     padding: 5%;
+    border: 2px solid #007bff;
 }
 
 .img_plac{
@@ -276,4 +277,45 @@ agm-map {
     width: 70%;
     padding-top: 6px;
 }
+.help_mat {
+    position: absolute;
+    margin-left: -38px;
+    bottom: 9px;
+    font-size: 35px;
+}
 
+[data-md-tooltip]:before {
+   content: attr(data-md-tooltip);
+   position: absolute;
+   bottom: -35px;
+   left: 50%;
+   padding: 8px;
+   transform: translateX(-50%) scale(0);
+   transition: transform 0.3s ease-in-out;
+   transform-origin: top;
+   background: #616161e6;
+   color: white;
+   border-radius: 2px;
+   font-size: 12px;
+   font-family: Roboto,sans-serif;
+   font-weight: 400;
+}
+[data-md-tooltip]:hover:before {
+ transform: translateX(-50%) scale(1);
+}
+.modal-content {
+    border-radius: 15px !important;
+}
+.help_content {
+    margin-left: 30px;
+}
+
+
+/*.help_content  ul {
+  list-style: none;
+}
+
+.help_content  ul li:before {
+ content:"\2713\0020";
+ padding-right: 10px;
+}*/
