--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1109,18 +1109,20 @@
       </ng-template>
       <ng-template #help let-modal>
         <div class="modal-body">
-          <div class="pg-header text-center">
+          <div class="pg-header">
             <p class="p-no-maring-bottom">Tips to keep your home safe
             </p>
           </div>
-            <div class="help_content">              
+            <div>              
               <ul>
-                <li>Move your car to a safe location </li><br>
-                <li>Determine if there are any injuries resulting in the incident</li><br>
-                <li>Call 911 and follow instructions from the police</li><br>
-                <li>Get names and information from the other involved in the incident </li><br>
-                <li>Take pictures of license plate of vehicle involved, damages and objects at the scene of the accident</li><br>
-                <li>Keep receipts of all the repairs, parking fees and any related expenses that are incurred </li><br>
+                <li>Know the location of your water main </li><br>
+                <li>Shut down the main if you are leaving for an extended time</li><br>
+                <li>Check appliances regularly for leaks</li><br>
+                <li>Promptly investigate and fix leaks</li><br>
+                <li>Upgrade washing machine hoses</li><br>
+                <li>Install water detection devices </li><br>
+                <li>Check your water pressure and install a pressure regulator, if required</li>
+                <li>Monitor your water bill – will always indicate if there is a leak somewhere</li>
               </ul>
             </div>
             <br>
