--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -306,12 +306,11 @@ agm-map {
 .modal-content {
     border-radius: 15px !important;
 }
-.help_content {
+/*.help_content {
     margin-left: 30px;
 }
 
-
-/*.help_content  ul {
+.help_content  ul {
   list-style: none;
 }
 
