removing default checkbox in property journey

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1113,7 +1113,7 @@
             <p class="p-no-maring-bottom">Tips to keep your home safe
             </p>
           </div>
-            <div>              
+            <div class="box-sha">
               <ul>
                 <li>Know the location of your water main </li><br>
                 <li>Shut down the main if you are leaving for an extended time</li><br>
