--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -778,7 +778,7 @@
                 <img height="80%" width="85%" src="../../assets/Contents.png" alt="Second slide">
               </div>
               <br>
-              <span>Content</span>
+              <span>Contents</span>
             </div>
             <div class="col-4 bg-hover" (click)="open(valuablemodal)">
               <div class="box-sha">
@@ -850,7 +850,7 @@
     <ng-container *ngIf="step===19">
       <div class="container-pg">
         <div class="pg-header">
-          <span *ngIf="userSelectReport=='car Image'">Images of Your Damges</span>
+          <span *ngIf="userSelectReport=='car Image'">Images of your damges</span>
           <span *ngIf="userSelectReport=='3rd party'">Details of the other party</span>
           <span *ngIf="userSelectReport=='police report'">Police Report</span>
         </div>
