--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -220,7 +220,7 @@
         <br />
         <div class="box-sha">
           <div class="list_Option">
-              <img class="img_plac" src="../../assets/Icons_Roadside Assistance.png" alt="roadside">
+              <img class="img_plac" src="../../assets/Icons_Roadside_Assistance.png" alt="roadside">
               <div class="dis_inl mrg_top_10px">Need roadside assistance</div>
               <span class="flo_rgt mrg_top_10px">
                 <i class="material-icons">
@@ -676,7 +676,7 @@
         <br>
         <div class="box-sha">
           <div class="list_Option" (click)="nextPage()">
-            <img class="img_plac" src="../../assets/Leaking pipe.png" alt="roadside">
+            <img class="img_plac" src="../../assets/Leaking_pipe.png" alt="roadside">
             <div class="dis_inl mrg_top_10px">Leaking/bursting pipe </div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
@@ -686,7 +686,7 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Water buildup.png" alt="roadside">
+            <img class="img_plac" src="../../assets/Water_buildup.png" alt="roadside">
             <div class="dis_inl mrg_top_10px">Water buildup in basement/attic </div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
@@ -696,7 +696,7 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Faulty household appliances.png" alt="roadside">
+            <img class="img_plac" src="../../assets/Faulty_household_appliances.png" alt="roadside">
             <div class="dis_inl mrg_top_10px">Faulty household appliances/sanitation</div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
@@ -706,7 +706,7 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Plumbing issue.png" alt="roadside">
+            <img class="img_plac" src="../../assets/Plumbing_issue.png" alt="roadside">
             <div class="dis_inl mrg_top_10px">Plumbing issue </div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
@@ -716,7 +716,7 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Heating, ventilating and AC units.png" alt="roadside">
+            <img class="img_plac" src="../../assets/Heating_ventilating.png" alt="roadside">
             <div class="dis_inl mrg_top_10px">Heating, ventilating and AC units </div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
@@ -726,7 +726,7 @@
             <div class="div_clr"></div>
           </div>
            <div class="list_Option">
-            <img class="img_plac" src="../../assets/Leaking roof.png" alt="roadside">
+            <img class="img_plac" src="../../assets/Leaking_roof.png" alt="roadside">
             <div class="dis_inl mrg_top_10px">Leaking roof </div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
@@ -746,7 +746,7 @@
             <div class="div_clr"></div>
           </div>
           <div class="list_Option">
-            <img class="img_plac" src="../../assets/Sprinkler malfunction.png" alt="roadside">
+            <img class="img_plac" src="../../assets/Sprinkler_malfunction.png" alt="roadside">
             <div class="dis_inl mrg_top_10px">Sprinkler malfunction</div>
             <span class="flo_rgt mrg_top_10px">
               <i class="material-icons">
